--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -238,7 +238,7 @@ background: #fff;border:1px solid #cac9c6;cursor:pointer;float:left;height:20px;
 #gallery  .ad-thumbs li {position: relative;}
 #collection_viewer_more{color: #fff; font-style: italic; font-size: 16px; width: 100px; text-align: center; line-height: 90px}
 
-.product_content {padding: 30px 0 0 30px;}
+.product_content {}
 /* Sign Up Box */
 
 #signup label{display: none}
