--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -94,6 +94,7 @@ span {
 #grid .block{width: 174px; margin: 0 20px 0 0; float: left; padding-bottom: 28px;}
 #grid .block img{border: 1px solid #ccc;}
 #grid .block h1{margin: 5px 0; font-size: 12px;}
+#grid .block h1 a{color: #000;}
 #grid .block h2{font-size: 12px; color: #999; font-weight:normal;}
 
 
