--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -57,12 +57,10 @@ span {
 .nav a.home{background: url(../images/b_home.png) top left no-repeat; height: 17px; width: 19px; text-indent: -9999px; float: left; margin-top: 16px;}
 .nav a.home:hover, .nav li.active a.home{background-position: bottom left;}
 
-#subHeader .press{float: right; padding: 12px 0 0 90px; background: url(../images/l_asseenin.jpg) 0px 27px no-repeat;}
-#subHeader .press a{height: 41px; width: 100px; float: left; background-position: top left; text-indent: -9999px; margin-left: 15px;}
-#subHeader .press a:hover{background-position: bottom left;}
-.press a.press1{background: url(../images/logo_nymag.png) no-repeat;}
-.press a.press2{background: url(../images/logo_myfashionlife.png) no-repeat;}
-.press a.press3{background: url(../images/logo_fashionspot.png) no-repeat;}
+#subHeader .press{float: right; padding: 0; /*background: url(../images/l_asseenin.jpg) 0px 27px no-repeat;*/}
+#subHeader .press a{ margin-left: 15px; opacity: 0.5;}
+#subHeader .press a:hover{ opacity: 1;}
+
 
 #subHeader .slogan{font-style: italic;  font-family:"jubilat-1","jubilat-2", Georgia; font-size: 16px; line-height: 48px; font-weight: 400}
 #subHeader .slogan span{color: #b63030; font-size: 16px;font-style: italic;font-family:"jubilat-1","jubilat-2", Georgia;font-weight: 400}
