--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -143,6 +143,7 @@ div.home {margin-top: 0px; }
   
 a.link{position:absolute;height: 150px;width: 200px;display: block;z-index: 10;}
 .panel.big a.link{height: 433px;width: 332px;}
+.panel.big .overlay{bottom: 25px !important;}
 
 .slides{z-index:0;visibility:hidden;}
 .slides.active{visibility:visible;}
