--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -297,7 +297,9 @@ background: #fff;border:1px solid #cac9c6;cursor:pointer;float:left;height:20px;
 #gallery .social_favorites {position: absolute; top:3px; right: 3px;}
 #gallery .social_favorites img {height: 20px; border: 0px solid #000; display:none;}
 #gallery  .ad-thumbs li {position: relative;}
-#collection_viewer_next{color: #fff; text-indent: -9999px; background: url(../images/nav_thumb_next.png) top left no-repeat; font-style: italic; font-size: 16px; width: 100px; text-align: center; line-height: 90px}
+#collection_viewer_next, #collection_viewer_prev{ text-indent: -9999px; width: 30px; height: 87px;position: absolute; }
+#collection_viewer_next{right: 0;  background: url(../images/nav_thumb_next.png) top left no-repeat; }
+#collection_viewer_prev{left: 0;  background: url(../images/nav_thumb_prev.png) top left no-repeat;}
 
 .product_content {}
 /* Sign Up Box */
