--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -293,11 +293,11 @@ background: #fff;border:1px solid #cac9c6;cursor:pointer;float:left;height:20px;
 .source a{font-size: 11px important!;}
 
 #gallery {background: -moz-linear-gradient(center top , #FFFFFF 0%, #F3F3F3 100%) repeat scroll 0 0 transparent;
-    box-shadow: 0 -2px 2px #CCCCCC inset;}
+    box-shadow: 0 -2px 2px #CCCCCC inset; margin-left: 26px}
 #gallery .social_favorites {position: absolute; top:3px; right: 3px;}
 #gallery .social_favorites img {height: 20px; border: 0px solid #000; display:none;}
 #gallery  .ad-thumbs li {position: relative;}
-#collection_viewer_next, #collection_viewer_prev{ text-indent: -9999px; width: 30px; height: 87px;position: absolute; }
+#collection_viewer_next, #collection_viewer_prev{ top: 0px; text-indent: -9999px; width: 30px; height: 87px;position: absolute; }
 #collection_viewer_next{right: 0;  background: url(../images/nav_thumb_next.png) top left no-repeat; }
 #collection_viewer_prev{left: 0;  background: url(../images/nav_thumb_prev.png) top left no-repeat;}
 
