--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -104,8 +104,8 @@ span {
 
 #grid .social_favorites {position: absolute; top:9px; right: 7px;}
 #grid .social_favorites img {height: 23px; border: 0px solid #000; display:none;}
-#grid .block .thumb_link:hover .social_favorites img{display: block;}
-#grid .thumb_link{position: relative;}
+#grid .block .thumb_img:hover .social_favorites img{display: block;}
+#grid .thumb_img{position: relative;}
 
 /* Most Loved theme*/
 .mostLoved h1{color: #b63030; font-size: 18px; font-weight: 100; margin: 0 0 12px 0;}
