--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -421,11 +421,15 @@ a.btnFacebook:hover, a.btnTwitter:hover{background-position: bottom left;}
 #invite_block h2{color: #888; margin-bottom: 5px; }
 #invite_block h3 {font-style: italic; font-size: 12px; font-weight: normal; color: #;}
 #invite_block #explanation {background-color: #fff;font-size: 12px;  text-align: left;  padding: 15px; border: 1px solid #444; overflow: hidden;}
-#invite_block #explanation #col1, #invite_block #explanation #col2 {float: left}
-#invite_block #explanation #col1 {width: 50%; margin-right: 10px; padding-right: 10px; border-right: 1px dotted #aaa}
+#invite_block #explanation #col1, #invite_block #explanation #col2 {float: left; width: 46%;}
+#invite_block #explanation #col2 {width: 50%; margin-left: 10px; padding-left: 10px; border-left: 1px dotted #aaa}
 #invite_block #email {margin-top: 20px; }
 #invite_block #share_link {margin-top: 40px}
 #invite_block .form-text.urlCode{float: left}
+#invite_block #explanation #col2 .column {float: left; padding-left: 10px; width: 140px; }
+#invite_block #explanation #col2 .column p{margin-bottom: 10px; }
+#invite_block #explanation #col2 .column h3{font-weight: bold; font-style: normal; color: #111;}
+
 
 #block-views-nodequeue-1-block h2 {
 font-size:16px;
