--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -134,6 +134,7 @@ div.home {margin-top: 0px; }
 #promoTop p{font-family:"jubilat-1","jubilat-2", Georgia;font-style:italic; font-weight: 400; margin: 6px 30px 16px 30px; line-height: 18px; font-size: 14px; color: #ccc; text-shadow: 2px 2px #555;}
 #promoTop .button{width: 146px; height: 26px; line-height: 37px; text-align:center; color: #fff; background: url(../images/b_getinspired.jpg) top left no-repeat; display: block; margin: 10px auto 0; font-size: 14px; text-indent:-9999px;}
 #promoTop .button:hover{background-position: bottom left;}
+#promoTop .panel-block {background: url("../images/bg_panel_invite.jpg") repeat scroll 0 0 transparent;height: 267px;}
 
 #browse .pad{padding: 20px; text-align:center;}
 
