--- a/themes/v15_fadmashion_commerce/css/style.css
+++ b/themes/v15_fadmashion_commerce/css/style.css
@@ -121,6 +121,7 @@ span {
 .productInfo .most_loved_number {padding-right: 10px; margin-right: 10px; border-right: 1px solid #ddd;}
 #all-time {  }
 
+.browse_by.child {display: none;}
 
 /********* homepage panels **********/
 
